fix: code line wrap

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -141,6 +141,71 @@
   }
 }
 
+@layer components {
+  .blog-prose {
+    font-family: var(--font-serif);
+
+    & :where(h1, h2, h3, h4, h5, h6) {
+      font-family: var(--font-mono);
+    }
+
+    & :where(h1) {
+      font-size: var(--text-2xl);
+    }
+    & :where(h2) {
+      font-size: var(--text-2xl);
+    }
+    & :where(h3) {
+      font-size: var(--text-xl);
+    }
+    & :where(h4) {
+      font-size: var(--text-lg);
+    }
+    & :where(h5) {
+      font-size: var(--text-base);
+    }
+    & :where(h6) {
+      font-size: var(--text-sm);
+    }
+
+    & :where(p) {
+      text-align: left;
+    }
+
+    & :where(a) {
+      text-underline-offset: 6px;
+    }
+    & :where(a):focus {
+      outline: 2px solid var(--color-neutral-900);
+      outline-offset: 2px;
+    }
+    :where(.dark, .dark *) & :where(a):focus {
+      outline-color: var(--color-neutral-100);
+    }
+
+    & :where(pre) {
+      border: 1px solid var(--color-neutral-300);
+      border-radius: 0.375rem;
+      white-space: pre-wrap;
+      overflow-wrap: break-word;
+    }
+    :where(.dark, .dark *) & :where(pre) {
+      border-color: var(--color-neutral-700);
+    }
+
+    & :where(:not(pre) > code) {
+      background-color: var(--color-neutral-200);
+      padding: 0.125rem 0.375rem;
+      border-radius: 0.25rem;
+      font-size: 0.875em;
+    }
+    :where(.dark, .dark *) & :where(:not(pre) > code) {
+      background-color: var(--color-neutral-800);
+    }
+  }
+
+}
+
 @utility tag {
   white-space: nowrap;
   background-color: var(--color-neutral-900);
